fix image downloader